package DesiginPatternHomework.Decorator;

public interface Sheep {
    void run();
    int getLives();
    void loseLife();
}