@startuml Decorator Pattern

title 装饰模式 - 喜羊羊逃命游戏

interface Sheep {
    + getDescription(): String
    + getLives(): int
    + bite(): void
}

class HappySheep {
    - lives: int
    + HappySheep()
    + getDescription(): String
    + getLives(): int
    + bite(): void
}

abstract class SheepDecorator {
    # decoratedSheep: Sheep
    + SheepDecorator(sheep: Sheep)
    + getDescription(): String
    + getLives(): int
    + bite(): void
}

class ShieldDecorator {
    - hasShield: boolean
    + ShieldDecorator(sheep: Sheep)
    + getDescription(): String
    + bite(): void
}

class SpeedBoostDecorator {
    + SpeedBoostDecorator(sheep: Sheep)
    + getDescription(): String
    + run(): void
}

class WaterWalkDecorator {
    + WaterWalkDecorator(sheep: Sheep)
    + getDescription(): String
    + crossWater(): void
}

Sheep <|.. HappySheep
Sheep <|.. SheepDecorator
SheepDecorator <|-- ShieldDecorator
SheepDecorator <|-- SpeedBoostDecorator
SheepDecorator <|-- WaterWalkDecorator

SheepDecorator o-- Sheep

note right of ShieldDecorator
  红苹果：保护罩
  被咬不掉命
end note

note right of SpeedBoostDecorator
  绿苹果：加速奔跑
end note

note right of WaterWalkDecorator
  黄苹果：可趟水跑
end note

@enduml
